--- a/Droid/AngleXplore.Droid.csproj
+++ b/Droid/AngleXplore.Droid.csproj
@@ -64,13 +64,14 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
-    <AndroidResource Include="Resources\mipmap-hdpi\Icon.png" />
+    <AndroidResource Include="Resources\mipmap-hdpi\Icon_angles.png" />
     <AndroidResource Include="Resources\mipmap-mdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\Main.axml" />
     <AndroidResource Include="Resources\layout\Menu.axml" />
+    <AndroidResource Include="Resources\mipmap-hdpi\icon_big.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\layout\" />
